--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "dependencies": {
     "async": "~0.2.9",
     "lodash": "~2.0.0",
-    "mongodb": "~1.3.19"
+    "mongodb": "~1.3.19",
+    "bluebird": "~1.0.0"
   },
   "devDependencies": {
     "mocha": "*",
